Fix closing of the navbar on smaller screens (#35)
Previously, you couldn't access the nav button on mobile when the snapshots panel wasn't visible. Now you can.

--- a/src/components/wrapper/wrapper.scss
+++ b/src/components/wrapper/wrapper.scss
@@ -81,9 +81,13 @@
   visibility: hidden;
   opacity: 0;
   transition: all ease 0.4s;
+  z-index: 1;
 
-  &--offset {
-    right: -50px;
+  @media (min-width: $breakpoint-small) {
+    &--offset {
+      right: -50px;
+      z-index: auto;
+    }
   }
 
   &--visible {
